--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^4.1.1",
     "fs": "0.0.1-security",
     "log4node": "^0.1.6",
+    "omxplayer": "^1.0.0",
     "readline": "^1.3.0",
     "ws": "^8.2.0"
   }
